--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "jshint": "node_modules/.bin/jshint src/. test/. --config",
-    "mocha": "node_modules/.bin/mocha test/ --recursive",
+    "jshint": "jshint lib/. test/. --config",
+    "mocha": "mocha test/ --recursive",
     "test": "npm run jshint && npm run mocha"
   },
   "directories": {
