--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lib": "lib"
   },
   "dependencies": {
+    "jsdom": "^3.1.2",
     "uberproto": "^1.1.2"
   },
   "devDependencies": {
@@ -46,10 +47,11 @@
     "feathers": "^1.1.0-pre.0",
     "feathers-memory": "^0.3.4",
     "jquery": "^2.1.4",
-    "jsdom": "^5.4.3",
     "jshint": "^2.6.3",
     "mocha": "^2.1.0",
     "request": "^2.56.0",
-    "superagent": "^1.2.0"
+    "socket.io-client": "^1.3.5",
+    "superagent": "^1.2.0",
+    "ws": "^0.7.2"
   }
 }
