--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "lib": "lib"
   },
   "dependencies": {
+    "events": "^1.0.2",
+    "querystring": "^0.2.0",
     "uberproto": "^1.1.2"
   },
   "devDependencies": {
