--- a/package.json
+++ b/package.json
@@ -25,33 +25,38 @@
   },
   "main": "lib/client.js",
   "scripts": {
-    "build": "rm -rf dist/ && mkdir -p dist && browserify lib/client.js --standalone feathers --outfile dist/feathers.js",
+    "build": "rm -rf dist/ && mkdir -p dist && browserify src/client.js -t babelify --standalone feathers --outfile dist/feathers.js",
     "add-dist": "npm run build && git add dist/ --force && git commit -am \"Updating dist\"",
     "publish": "git push origin && git push origin --tags",
     "release:patch": "npm run add-dist && npm version patch && npm publish",
     "release:minor": "npm run add-dist && npm version minor && npm publish",
     "release:major": "npm run add-dist && npm version major && npm publish",
-    "jshint": "jshint lib/. test/. --config",
-    "mocha": "mocha test/ --recursive --timeout 5000",
+    "compile": "rm -rf lib/ && babel -d lib/ src/",
+    "watch": "babel --watch -d lib/ src/",
+    "jshint": "jshint src/. test/. --config",
+    "mocha": "mocha test/ --compilers js:babel-core/register --recursive --timeout 5000",
     "test": "npm run jshint && npm run mocha"
   },
   "directories": {
     "lib": "lib"
   },
   "dependencies": {
-    "events": "^1.0.2",
     "feathers-commons": "^0.2.8",
-    "querystring": "^0.2.0",
+    "jshint": "^2.8.0",
     "uberproto": "^1.1.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.1.4",
+    "babel-core": "^6.1.4",
+    "babel-plugin-transform-object-assign": "^6.1.18",
+    "babel-preset-es2015": "^6.1.4",
+    "babelify": "^7.2.0",
     "body-parser": "^1.12.4",
     "browserify": "^10.2.3",
     "feathers": "^1.1.0-pre.0",
     "feathers-memory": "^0.3.4",
     "jquery": "^2.1.4",
     "jsdom": "^6.5.1",
-    "jshint": "^2.6.3",
     "mocha": "^2.1.0",
     "request": "^2.56.0",
     "socket.io-client": "^1.3.5",
