--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "watch": "babel --watch -d lib/ src/",
     "jshint": "jshint src/. test/. --config",
     "mocha": "mocha test/ --compilers js:babel-core/register --recursive --timeout 5000",
-    "test": "npm run jshint && npm run mocha"
+    "test": "npm run compile && npm run jshint && npm run mocha"
   },
   "directories": {
     "lib": "lib"
