--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   },
   "main": "lib/client.js",
   "scripts": {
-    "build": "rm -rf dist/ && mkdir -p dist && browserify src/client.js -t babelify --standalone feathers --outfile dist/feathers.js",
-    "add-dist": "npm run build && git add dist/ --force && git commit -am \"Updating dist\"",
+    "clean": "rm -rf dist/ && mkdir -p dist",
+    "browserify:test": "browserify test/browser/test.js -t babelify --outfile dist/browser.test.js",
+    "browserify:dist": "browserify src/client.js -t babelify --standalone feathers --outfile dist/feathers.js",
+    "browserify": "npm run browserify:dist && npm run browserify:test",
+    "add-dist": "npm run clean && npm run browserify:dist && git add dist/ --force && git commit -am \"Updating dist\"",
     "prepublish": "npm run compile",
     "publish": "git push origin && git push origin --tags",
     "release:patch": "npm run add-dist && npm version patch && npm publish",
@@ -35,29 +38,32 @@
     "compile": "rm -rf lib/ && babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
     "jshint": "jshint src/. test/. --config",
-    "mocha": "mocha test/ --compilers js:babel-core/register --recursive --timeout 5000",
-    "test": "npm run compile && npm run jshint && npm run mocha && nsp check"
+    "mocha": "mocha test/*/**.test.js --compilers js:babel-core/register --recursive --timeout 10000",
+    "test": "npm run clean && npm run browserify && npm run jshint && npm run mocha && nsp check"
   },
   "directories": {
     "lib": "lib"
   },
+  "browser": {
+    "babel-polyfill": false,
+    "debug": false
+  },
   "dependencies": {
-    "events": "^1.1.0",
-    "feathers-commons": "^0.3.0",
-    "querystring": "^0.2.0",
-    "uberproto": "^1.1.2"
+    "feathers": "^2.0.0-pre.1",
+    "feathers-hooks": "^1.0.0-pre.2",
+    "feathers-primus": "^1.1.0",
+    "feathers-rest": "^1.1.0",
+    "feathers-socketio": "^1.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.1.4",
     "babel-core": "^6.1.4",
-    "babel-plugin-transform-object-assign": "^6.1.18",
+    "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.1.4",
     "babelify": "^7.2.0",
     "body-parser": "^1.12.4",
     "browserify": "^10.2.3",
-    "feathers": "^1.1.0-pre.0",
     "feathers-memory": "^0.3.4",
-    "jquery": "^2.1.4",
     "jsdom": "^6.5.1",
     "jshint": "^2.8.0",
     "mocha": "^2.1.0",
@@ -66,6 +72,7 @@
     "request": "^2.56.0",
     "socket.io-client": "^1.3.5",
     "superagent": "^1.2.0",
+    "testee": "^0.2.5",
     "ws": "^0.7.2"
   }
 }
