--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "watch": "babel --watch -d lib/ src/",
     "jshint": "jshint src/. test/. --config",
     "mocha": "mocha test/ --compilers js:babel-core/register --recursive --timeout 5000",
-    "test": "npm run compile && npm run jshint && npm run mocha"
+    "test": "npm run compile && npm run jshint && npm run mocha && nsp check"
   },
   "directories": {
     "lib": "lib"
@@ -61,6 +61,7 @@
     "jsdom": "^6.5.1",
     "jshint": "^2.8.0",
     "mocha": "^2.1.0",
+    "nsp": "^2.2.0",
     "node-fetch": "^1.3.3",
     "request": "^2.56.0",
     "socket.io-client": "^1.3.5",
