--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "feathers-client",
-  "description": "Feathers service clients for REST (jQuery, Request, Superagent) and Websocket (Socket.io, Primus) connections",
-  "version": "0.5.2",
+  "description": "A module that consolidates Feathers client modules for REST (jQuery, Request, Superagent) and Websocket (Socket.io, Primus) connections",
+  "version": "1.0.0-pre.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/feathersjs/feathers-client.git"
@@ -18,8 +18,7 @@
     "rest",
     "api"
   ],
-  "author": "David Luecke <daff@neyeon.com> (https://feathersjs.com)",
-  "contributors": [],
+  "author": "Feathers contributors",
   "engines": {
     "node": ">=0.10.0"
   },
