--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "add-dist": "npm run clean && npm run browserify:dist && git add dist/ --force && git commit -am \"Updating dist\"",
     "prepublish": "npm run compile",
     "publish": "git push origin && git push origin --tags",
+    "release:prerelease": "npm run add-dist && npm version prerelease && npm publish",
     "release:patch": "npm run add-dist && npm version patch && npm publish",
     "release:minor": "npm run add-dist && npm version minor && npm publish",
     "release:major": "npm run add-dist && npm version major && npm publish",
