Adding feathers-authentication to client

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "feathers": "^2.0.0-pre.1",
+    "feathers-authentication": "^0.4.1",
     "feathers-hooks": "^1.0.0-pre.2",
     "feathers-primus": "^1.1.0",
     "feathers-rest": "^1.1.0",
