--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
-sudo: false
+sudo: required
 language: node_js
 node_js: "node"
 before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+  - sudo apt-get install python-software-properties
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -y
+  - sudo apt-get install gcc-4.9 g++-4.9 -y
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 20
+  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 20
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
