--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "browserify": "npm run browserify:dist && npm run browserify:min && npm run browserify:test",
     "add-dist": "npm run clean && npm run browserify:dist && npm run browserify:min && git add dist/ --force && git commit -am \"Updating dist\"",
     "prepublish": "npm run compile",
-    "publish": "git push origin && git push origin --tags",
+    "publish": "git push origin --tags && npm run changelog && git push origin",
+    "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
     "release:prerelease": "npm run add-dist && npm version prerelease && npm publish",
     "release:patch": "npm run add-dist && npm version patch && npm publish",
     "release:minor": "npm run add-dist && npm version minor && npm publish",
