--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "watch": "babel --watch -d lib/ src/",
     "jshint": "jshint src/. test/. --config",
     "mocha": "mocha test/*/**.test.js --compilers js:babel-core/register --recursive --timeout 10000",
-    "test": "npm run clean && npm run browserify && npm run jshint && npm run mocha"
+    "saucelabs": "grunt",
+    "test": "npm run clean && npm run browserify && npm run jshint && npm run mocha",
+    "ci": "npm test && npm run saucelabs"
   },
   "directories": {
     "lib": "lib"
@@ -69,6 +71,9 @@
     "body-parser": "^1.12.4",
     "browserify": "^13.0.0",
     "feathers-memory": "^0.8.0",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-saucelabs": "^9.0.0",
     "jsdom": "8.1.0",
     "jshint": "^2.8.0",
     "mocha": "^3.0.0",
@@ -76,7 +81,6 @@
     "request": "^2.56.0",
     "socket.io-client": "^1.3.5",
     "superagent": "^2.0.0",
-    "testee": "^0.2.5",
     "uglifyjs": "^2.4.10"
   }
 }
