--- a/package.json
+++ b/package.json
@@ -39,11 +39,20 @@
     "release:major": "npm run add-dist && npm version major && npm publish",
     "compile": "rm -rf lib/ && babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
-    "jshint": "jshint src/. test/. --config",
+    "lint": "eslint-if-supported semistandard --fix",
     "mocha": "mocha test/*/**.test.js --compilers js:babel-core/register --recursive --timeout 10000",
     "saucelabs": "grunt",
-    "test": "npm run clean && npm run browserify && npm run jshint && npm run mocha",
+    "test": "npm run clean && npm run browserify && npm run lint && npm run mocha",
     "ci": "npm test && npm run saucelabs"
+  },
+  "semistandard": {
+    "env": [
+      "mocha"
+    ],
+    "ignore": [
+      "/lib",
+      "/dist"
+    ]
   },
   "directories": {
     "lib": "lib"
@@ -70,15 +79,16 @@
     "babelify": "^7.2.0",
     "body-parser": "^1.12.4",
     "browserify": "^13.0.0",
+    "eslint-if-supported": "^1.0.1",
     "feathers-memory": "^0.8.0",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-saucelabs": "^9.0.0",
     "jsdom": "8.1.0",
-    "jshint": "^2.8.0",
     "mocha": "^3.0.0",
     "node-fetch": "^1.3.3",
     "request": "^2.56.0",
+    "semistandard": "^9.1.0",
     "socket.io-client": "^1.3.5",
     "superagent": "^2.0.0",
     "uglifyjs": "^2.4.10"
