--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "main": "lib/client.js",
   "scripts": {
-    "clean": "rm -rf dist/ && mkdir -p dist",
+    "clean": "rimraf dist/ && mkdir -p dist",
     "browserify:test": "browserify test/browser/test.js -t babelify --outfile dist/browser.test.js",
     "browserify:dist": "browserify src/client.js -t babelify --standalone feathers --outfile dist/feathers.js",
     "browserify:min": "browserify src/client.js -t babelify --standalone feathers | uglifyjs > dist/feathers.min.js",
@@ -37,7 +37,7 @@
     "release:patch": "npm run add-dist && npm version patch && npm publish",
     "release:minor": "npm run add-dist && npm version minor && npm publish",
     "release:major": "npm run add-dist && npm version major && npm publish",
-    "compile": "rm -rf lib/ && babel -d lib/ src/",
+    "compile": "rimraf lib/ && babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
     "lint": "eslint-if-supported semistandard --fix",
     "mocha": "mocha test/*/**.test.js --compilers js:babel-core/register --recursive --timeout 10000",
@@ -88,6 +88,7 @@
     "mocha": "^3.0.0",
     "node-fetch": "^1.3.3",
     "request": "^2.56.0",
+    "rimraf": "^2.5.4",
     "semistandard": "^9.1.0",
     "socket.io-client": "^1.3.5",
     "superagent": "^2.0.0",
