--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "compile": "rimraf lib/ && babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
     "lint": "eslint-if-supported semistandard --fix",
-    "mocha": "mocha test/*/**.test.js --compilers js:babel-core/register --recursive --timeout 10000",
+    "mocha": "mocha --opts mocha.opts",
     "saucelabs": "grunt",
-    "test": "npm run clean && npm run browserify && npm run lint && npm run mocha",
-    "ci": "npm test && npm run saucelabs"
+    "test": "npm run clean && npm run browserify && npm run lint && npm run coverage",
+    "ci": "npm test && npm run saucelabs",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --opts mocha.opts"
   },
   "semistandard": {
     "env": [
@@ -84,6 +85,7 @@
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-saucelabs": "^9.0.0",
+    "istanbul": "^1.1.0-alpha.1",
     "jsdom": "8.1.0",
     "mocha": "^3.0.0",
     "node-fetch": "^1.3.3",
