--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "semistandard": "^9.1.0",
     "socket.io-client": "^1.3.5",
     "superagent": "^2.0.0",
-    "uglifyjs": "^2.4.10"
+    "uglifyjs": "^2.4.10",
+    "ws": "^1.1.1"
   }
 }
