--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,6 @@
 sudo: false
 language: node_js
-node_js:
-- node
-- '6'
-- '4'
-before_install:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
+node_js: node
 script: npm run ci
 before_script:
 - npm install -g codeclimate-test-reporter
