--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     "browserify:dist": "browserify src/client.js -t babelify --standalone feathers --outfile dist/feathers.js",
     "browserify:min": "browserify src/client.js -t babelify --standalone feathers | uglifyjs > dist/feathers.min.js",
     "browserify": "npm run browserify:dist && npm run browserify:min && npm run browserify:test",
+    "reinstall": "rm -rf node_modules && npm install",
     "add-dist": "npm run clean && npm run browserify:dist && npm run browserify:min && git add dist/ --force && git commit -am \"Updating dist\"",
     "prepublish": "npm run compile",
     "publish": "git push origin --tags && npm run changelog && git push origin",
     "bower": "node version && git add bower.json && git commit -am \"Update version\"",
     "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
-    "release:prerelease": "npm run add-dist && npm version prerelease && npm run bower && npm publish",
-    "release:patch": "npm run add-dist && npm version patch && npm run bower && npm publish",
-    "release:minor": "npm run add-dist && npm version minor && npm run bower && npm publish",
-    "release:major": "npm run add-dist && npm version major && npm run bower && npm publish",
+    "release:prerelease": "npm run reinstall && npm run add-dist && npm version prerelease && npm run bower && npm publish",
+    "release:patch": "npm run reinstall && npm run add-dist && npm version patch && npm run bower && npm publish",
+    "release:minor": "npm run reinstall && npm run add-dist && npm version minor && npm run bower && npm publish",
+    "release:major": "npm run reinstall && npm run add-dist && npm version major && npm run bower && npm publish",
     "compile": "rimraf lib/ && babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
     "lint": "eslint-if-supported semistandard --fix",
