--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 sudo: false
 language: node_js
-node_js: node
-script: npm run ci
+node_js:
+  - node
+  - '6'
+  - '4'
+script: 'npm run ci'
 before_script:
-- npm install -g codeclimate-test-reporter
+  - 'npm install -g codeclimate-test-reporter'
 after_script:
-- codeclimate-test-reporter < coverage/lcov.info
+  - 'codeclimate-test-reporter < coverage/lcov.info'
 addons:
   code_climate:
     repo_token: 8b52d247742e799ab703c2c2fcce5a8c176a6f9887df645ba17745f68af4cdc2
