--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   },
   "main": "lib/client.js",
   "scripts": {
-    "clean": "rimraf dist/ && mkdir -p dist",
+    "clean": "shx rm -rf dist/ && shx mkdir -p dist",
     "browserify:test": "browserify test/browser/test.js -t babelify --outfile dist/browser.test.js",
     "browserify:dist": "browserify src/client.js -t babelify --standalone feathers --outfile dist/feathers.js",
     "browserify:min": "browserify src/client.js -t babelify --standalone feathers | uglifyjs > dist/feathers.min.js",
     "browserify": "npm run browserify:dist && npm run browserify:min && npm run browserify:test",
-    "reinstall": "rm -rf node_modules && npm install",
+    "reinstall": "shx rm -rf node_modules && npm install",
     "add-dist": "npm run clean && npm run browserify:dist && npm run browserify:min && git add dist/ --force && git commit -am \"Updating dist\"",
     "prepublish": "npm run compile",
     "publish": "git push origin --tags && npm run changelog && git push origin",
@@ -39,7 +39,7 @@
     "release:patch": "npm run reinstall && npm run add-dist && npm version patch && npm run bower && npm publish",
     "release:minor": "npm run reinstall && npm run add-dist && npm version minor && npm run bower && npm publish",
     "release:major": "npm run reinstall && npm run add-dist && npm version major && npm run bower && npm publish",
-    "compile": "rimraf lib/ && babel -d lib/ src/",
+    "compile": "shx rm -rf lib/ && babel -d lib/ src/",
     "watch": "babel --watch -d lib/ src/",
     "lint": "eslint-if-supported semistandard --fix",
     "mocha": "mocha --opts mocha.opts",
@@ -94,7 +94,7 @@
     "mocha": "^3.0.0",
     "node-fetch": "^1.3.3",
     "request": "^2.56.0",
-    "rimraf": "^2.5.4",
+    "shx": "^0.2.1",
     "semistandard": "^9.1.0",
     "socket.io-client": "^1.7.2",
     "superagent": "^3.1.0",
