Feathers Auth Update (#131)
* Update feathers-authentication-client version

* Update feathers-authentication-client

* Bump version

* Updating dist

* Revert "Updating dist"

This reverts commit ac871b0a87373e15160104f179aece00cdf7b7c7.

* Revert "Bump version"

This reverts commit 0f857a3659a556d421af5272ef86fb723fe8d52e.

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   "typings": "index.d.ts",
   "dependencies": {
     "feathers": "2.0.3",
-    "feathers-authentication": "0.7.12",
+    "feathers-authentication-client": "^0.1.6",
     "feathers-commons": "^0.8.7",
     "feathers-hooks": "1.7.1",
     "feathers-primus": "2.0.0",
