--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-client",
-  "version": "1.9.0",
+  "version": "2.0.1-0",
   "repo": "feathersjs/feathers-client",
   "keywords": [
     "feathers",
