--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
   "typings": "index.d.ts",
   "dependencies": {
     "feathers": "2.1.1",
-    "feathers-authentication-client": "^0.1.6",
-    "feathers-commons": "^0.8.7",
+    "feathers-authentication-client": "0.1.6",
+    "feathers-errors": "2.6.1",
     "feathers-hooks": "1.8.1",
     "feathers-primus": "2.1.0",
     "feathers-rest": "1.7.1",
