--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "feathers-client",
   "description": "A module that consolidates Feathers client modules for REST (jQuery, Request, Superagent) and Websocket (Socket.io, Primus) connections",
-  "version": "2.0.0-pre.2",
+  "version": "2.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/feathersjs/feathers-client.git"
