Update to new name and plugin infrastructure

--- a/.npmignore
+++ b/.npmignore
@@ -1,15 +1,10 @@
-.git*
-.DS_Store
-.babelrc
-*.markdown
-*.md
-.idea
-!dist/
-!lib/
-src/
-.github/
-coverage
 .editorconfig
+.jshintrc
 .travis.yml
 .istanbul.yml
+.babelrc
+.idea/
+.vscode/
 test/
+coverage/
+.github/
