--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "feathers-socketio": "2.0.0"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.12.4",
     "browserify": "^14.1.0",
     "feathers-memory": "^1.0.0",
