--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@feathersjs/client",
   "description": "A module that consolidates Feathers client modules for REST (jQuery, Request, Superagent) and Websocket (Socket.io, Primus) connections",
-  "version": "2.4.0",
+  "version": "3.0.0-pre.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/feathersjs/client.git"
@@ -13,28 +13,21 @@
   "homepage": "https://github.com/feathersjs/client",
   "keywords": [
     "feathers",
-    "feathers-plugin",
-    "batch",
-    "rest",
-    "api"
+    "feathers-plugin"
   ],
   "author": "Feathers contributors",
   "engines": {
     "node": ">= 6"
   },
-  "main": "lib/client.js",
+  "main": "lib.js",
   "scripts": {
     "clean": "shx rm -rf dist/ && shx mkdir -p dist",
-    "browserify:test": "browserify browser/test.js --outfile dist/browser.test.js",
-    "browserify:dist": "browserify lib/client.js --standalone feathers --outfile dist/feathers.js",
-    "browserify:min": "browserify lib/client.js --standalone feathers | uglifyjs > dist/feathers.min.js",
-    "browserify": "npm run browserify:dist && npm run browserify:min && npm run browserify:test",
     "reinstall": "shx rm -rf node_modules && npm install",
-    "add-dist": "npm run clean && npm run browserify:dist && npm run browserify:min && git add dist/ --force && git commit -am \"Updating dist\"",
+    "add-dist": "npm run clean && npm run build && git add dist/ --force && git commit -am \"Updating dist\"",
     "publish": "git push origin --tags && npm run changelog && git push origin",
     "bower": "node version && git add bower.json && git commit -am \"Update version\"",
     "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
-    "release:prerelease": "npm run reinstall && npm run add-dist && npm version prerelease && npm run bower && npm publish --tag pre --access public",
+    "release:pre": "npm run reinstall && npm run add-dist && npm version prerelease && npm run bower && npm publish --tag pre --access public",
     "release:patch": "npm run reinstall && npm run add-dist && npm version patch && npm run bower && npm publish --access public",
     "release:minor": "npm run reinstall && npm run add-dist && npm version minor && npm run bower && npm publish --access public",
     "release:major": "npm run reinstall && npm run add-dist && npm version major && npm run bower && npm publish --access public",
@@ -42,37 +35,38 @@
     "mocha": "mocha --opts mocha.opts",
     "saucelabs": "grunt",
     "test": "npm run lint && npm run coverage",
-    "ci": "npm test && npm run saucelabs",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --opts mocha.opts"
+    "ci": "npm test",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --opts mocha.opts",
+    "build": "npm run clean && npm run webpack",
+    "build:test": "cd browser && webpack",
+    "webpack": "parallel-webpack"
   },
   "semistandard": {
     "env": [
       "mocha"
     ]
   },
-  "directories": {
-    "lib": "lib"
-  },
-  "browser": {
-    "babel-polyfill": false
-  },
   "greenkeeper": {
     "ignore": "jsdom"
   },
-  "typings": "index.d.ts",
   "dependencies": {
-    "feathers": "2.2.3",
-    "feathers-authentication-client": "^0.3.1",
-    "feathers-errors": "2.9.2",
-    "feathers-hooks": "2.1.1",
-    "feathers-primus": "2.2.0",
-    "feathers-rest": "1.8.0",
-    "feathers-socketio": "2.0.0"
+    "@feathersjs/feathers": "^3.0.0-pre.3",
+    "@feathersjs/errors": "^3.0.0-pre.1",
+    "@feathersjs/authentication-client": "^1.0.0-pre.1",
+    "@feathersjs/primus-client": "^1.0.0-pre.2",
+    "@feathersjs/rest-client": "^1.3.0",
+    "@feathersjs/socketio-client": "^1.0.0-pre.3"
   },
   "devDependencies": {
+    "@feathersjs/commons": "^1.2.0",
+    "@feathersjs/express": "^1.0.0-pre.4",
+    "@feathersjs/primus": "^3.0.0-pre.4",
+    "@feathersjs/socketio": "^3.0.0-pre.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.12.4",
-    "browserify": "^14.1.0",
     "feathers-memory": "^1.0.0",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
@@ -81,12 +75,16 @@
     "jsdom": "8.1.0",
     "mocha": "^4.0.0",
     "node-fetch": "^1.3.3",
+    "parallel-webpack": "^2.2.0",
     "request": "^2.56.0",
     "semistandard": "^11.0.0",
     "shx": "^0.2.1",
     "socket.io-client": "^2.0.0",
     "superagent": "^3.1.0",
     "uglifyjs": "^2.4.10",
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "webpack": "^3.8.1",
+    "webpack-merge": "^4.1.0",
     "ws": "^3.1.0"
   }
 }
