--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-client",
-  "version": "2.4.0",
+  "version": "3.0.0-pre.1",
   "repo": "feathersjs/client",
   "keywords": [
     "feathers",
