--- a/package.json
+++ b/package.json
@@ -50,18 +50,18 @@
     "ignore": "jsdom"
   },
   "dependencies": {
-    "@feathersjs/feathers": "^3.0.0-pre.3",
-    "@feathersjs/errors": "^3.0.0-pre.1",
-    "@feathersjs/authentication-client": "^1.0.0-pre.1",
-    "@feathersjs/primus-client": "^1.0.0-pre.2",
-    "@feathersjs/rest-client": "^1.3.0",
-    "@feathersjs/socketio-client": "^1.0.0-pre.3"
+    "@feathersjs/feathers": "3.0.0",
+    "@feathersjs/errors": "3.0.0",
+    "@feathersjs/authentication-client": "1.0.0",
+    "@feathersjs/primus-client": "1.0.0",
+    "@feathersjs/rest-client": "1.3.0",
+    "@feathersjs/socketio-client": "1.0.0"
   },
   "devDependencies": {
     "@feathersjs/commons": "^1.2.0",
-    "@feathersjs/express": "^1.0.0-pre.4",
-    "@feathersjs/primus": "^3.0.0-pre.4",
-    "@feathersjs/socketio": "^3.0.0-pre.4",
+    "@feathersjs/express": "^1.0.0",
+    "@feathersjs/primus": "^3.0.0",
+    "@feathersjs/socketio": "^3.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
