--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@feathersjs/client",
   "description": "A module that consolidates Feathers client modules for REST (jQuery, Request, Superagent) and Websocket (Socket.io, Primus) connections",
-  "version": "3.0.0-pre.1",
+  "version": "3.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/feathersjs/client.git"
