Update package.json (#215)
Allow loading via steal and npm

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "engines": {
     "node": ">= 6"
   },
-  "main": "lib.js",
+  "main": "index.js",
   "scripts": {
     "clean": "shx rm -rf dist/ && shx mkdir -p dist",
     "reinstall": "shx rm -rf node_modules && npm install",
