--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "presets": [ [ "es2015", { "loose": true }] ]
+  "presets": [
+    [
+      "@babel/preset-env",
+      { "loose": true }
+    ]
+  ]
 }
