--- a/package.json
+++ b/package.json
@@ -45,29 +45,33 @@
       "mocha"
     ]
   },
+  "browserslist": [
+    "last 2 versions",
+    "IE 10"
+  ],
   "greenkeeper": {
     "ignore": "jsdom"
   },
   "dependencies": {
-    "@feathersjs/authentication-client": "1.0.4",
-    "@feathersjs/errors": "3.3.2",
-    "@feathersjs/feathers": "3.2.1",
-    "@feathersjs/primus-client": "1.1.2",
-    "@feathersjs/rest-client": "1.4.3",
-    "@feathersjs/socketio-client": "1.1.2"
+    "@feathersjs/authentication-client": "1.0.5",
+    "@feathersjs/errors": "3.3.3",
+    "@feathersjs/feathers": "3.2.2",
+    "@feathersjs/primus-client": "1.1.3",
+    "@feathersjs/rest-client": "1.4.4",
+    "@feathersjs/socketio-client": "1.1.3"
   },
   "devDependencies": {
-    "@feathersjs/express": "^1.2.3",
-    "@feathersjs/primus": "^3.2.1",
-    "@feathersjs/socketio": "^3.2.2",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/core": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@feathersjs/express": "^1.2.6",
+    "@feathersjs/primus": "^3.2.4",
+    "@feathersjs/socketio": "^3.2.5",
+    "babel-loader": "^8.0.0",
     "body-parser": "^1.18.3",
-    "feathers-memory": "^2.1.3",
+    "feathers-memory": "^2.2.0",
     "grunt": "^1.0.3",
-    "grunt-cli": "^1.2.0",
+    "grunt-cli": "^1.3.1",
     "grunt-saucelabs": "^9.0.0",
     "jsdom": "8.1.0",
     "mocha": "^5.2.0",
@@ -77,9 +81,9 @@
     "semistandard": "^12.0.1",
     "shx": "^0.3.2",
     "socket.io-client": "^2.1.1",
-    "superagent": "^3.8.3",
+    "superagent": "^4.0.0-beta.5",
     "uglifyjs-webpack-plugin": "^2.0.0",
-    "webpack": "^4.16.5",
+    "webpack": "^4.19.0",
     "webpack-merge": "^4.1.4",
     "ws": "^6.0.0"
   }
